--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
 .portfolio {
   margin: 0 auto;
   background-color: #eceff1;
-  height: 850px;
+  height: 930px;
 }
 
 .portfolio_inner {
@@ -71,7 +71,7 @@ header {
   margin: 0 auto;
 }
 
-.portfolio_title {
+.title {
   font-size: 32px;
   font-weight: bold;
   color: #000000;
@@ -80,20 +80,19 @@ header {
   margin-bottom: 1em;
 }
 
-.portfolio_border {
+.border {
   border-bottom: solid #ec715f;
   position: absolute;
   left: 50%;
-  bottom: -10px;/*線の上下位置*/
+  bottom: -10px; /*線の上下位置*/
   display: inline-block;
-  width: 70px;/*線の長さ*/
-  height: 3px;/*線の太さ*/
+  width: 70px; /*線の長さ*/
+  height: 3px; /*線の太さ*/
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
-}
 
-.portfolio_text {
+.text {
   font-size: 16px;
   color: #000000;
   padding: 30px 0;
@@ -107,14 +106,14 @@ header {
 }
 
 .portfolio_image1 {
-  background-image: url("img/sketch.jpg") ;
+  background-image: url("img/sketch.jpg");
   height: 250px;
   width: 300px;
   background-size: cover;
   background-position: center;
 }
 .portfolio_image2 {
-  background-image: url("img/websuku.png") ;
+  background-image: url("img/websuku.png");
   height: 250px;
   width: 300px;
   background-size: cover;
@@ -122,7 +121,7 @@ header {
 }
 
 .portfolio_image3 {
-  background-image: url("img/write.jpg") ;
+  background-image: url("img/write.jpg");
   height: 250px;
   width: 300px;
   background-size: cover;
@@ -130,7 +129,7 @@ header {
 }
 
 .portfolio_image4 {
-  background-image: url("img/webcamp.png") ;
+  background-image: url("img/webcamp.png");
   height: 250px;
   width: 300px;
   background-size: cover;
@@ -139,7 +138,7 @@ header {
 }
 
 .portfolio_image5 {
-  background-image: url("img/talk.jpg") ;
+  background-image: url("img/talk.jpg");
   height: 250px;
   width: 300px;
   background-size: cover;
@@ -148,7 +147,7 @@ header {
 }
 
 .portfolio_image6 {
-  background-image: url("img/webcamp-mother.png") ;
+  background-image: url("img/webcamp-mother.png");
   height: 250px;
   width: 300px;
   background-size: cover;
@@ -156,3 +155,38 @@ header {
   margin-top: 10px;
 }
 
+.feature {
+  margin: 0 auto;
+  padding: 90px 0;
+}
+
+.feature-inner {
+  width: 980px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.icon {
+  font-size: 60px;
+}
+
+.feature-content-list {
+  color: #000000;
+  display: flex;
+  justify-content: center;
+}
+
+.content-title {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px 0;
+}
+
+.content-text {
+  text-align: left;
+}
+
+.content1,
+.content2 {
+  margin-right: 10px;
+}
