--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ header {
   font-size: 16px;
   color: #000000;
   padding: 30px 0;
+  text-align: center;
 }
 
 .portfolio_image_list {
@@ -189,4 +190,51 @@ header {
 .content1,
 .content2 {
   margin-right: 10px;
+}
+
+.profile {
+  margin: 0 auto;
+  padding: 90px 0;
+  background-color: #eceff1;
+}
+
+.profile-inner {
+  width: 1024px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.profile_content {
+  padding: 30px;
+  display: flex;
+  width: 0 auto;
+}
+
+.profile_content_left {
+  width: 512px;
+}
+
+.profile_content_right {
+  width: 512px;
+  text-align: left;
+}
+
+.Profile_image {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+}
+
+.profile_title {
+  font-size: 20px;
+  padding-bottom: 5px;
+  font-weight: bold;
+}
+
+.profile_text {
+  font-size: 16px;
+  color: #000000;
+  padding-bottom: 20px;
 }
