--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ header {
   list-style: none;
   padding: 20px 30px;
 }
+a {
+  color: #fafafa;
+  a:hover: pointer;
+  text-decoration: none;
+}
 
 .main_visual {
   height: 650px;
@@ -219,7 +224,7 @@ header {
   text-align: left;
 }
 
-.Profile_image {
+.profile_image {
   border-radius: 50%;
   overflow: hidden;
   width: 250px;
@@ -237,4 +242,49 @@ header {
   font-size: 16px;
   color: #000000;
   padding-bottom: 20px;
+}
+
+.contact {
+  margin: 0 auto;
+  padding: 90px 0;
+}
+
+.contact-inner {
+  width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.contact_form {
+  display:flex
+    }
+
+.contact_form_left{
+  width: 400px;
+}
+
+.contact_form_right {
+  width: 400px;
+}
+
+.contact_title {
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.contact_string {
+  margin-bottom: 16px;
+}
+
+.contact_string a {
+  text-decoration: underline;
+  color: #212121;
+}
+
+.contact_icon_group {
+
+}
+.contact_icon {
+
 }
